--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,15 @@ body{
 }
 /* HOME STYLES
 -------------------------------------------*/
+.home{
+    background: url("../placeholder-images/bg-home-office-studio.jpg") no-repeat;
+    background-size: cover;
 
+}
+
+.home .content-wrapper{
+    background: rgb(255 255 255 / 0.9);
+}
 /* RESUME STYLES
 -------------------------------------------*/
 
@@ -34,3 +42,8 @@ body{
 
 /* FOOTER STYLES
 -------------------------------------------*/
+
+.footer{
+    background: #222;
+    color: #d3d4d6;
+}
