--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,50 @@ Off-white     #f6f6f6
 
 /* GLOBAL STYLES
 -------------------------------------------*/
+/*
+  https://www.paulirish.com/2012/box-sizing-border-box-ftw/
+*/
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 body{
     background: #f6f6f6;
+}
+
+/* LINKS STYLES -*/
+a {
+    color: #3c8453;
+}
+a:hover{
+    color: #bcaa96;
+    text-decoration: none;
+}
+footer a{
+    color: #bcaa96;
+}
+
+footer a:hover{
+    color: #3c8453;
+}
+
+.btn {
+    background: #3c8453;
+    color: #f6f6f6;
+    text-decoration: none;
 }
 /* HOME STYLES
 -------------------------------------------*/
 .home{
-    background: url("../placeholder-images/bg-home-office-studio.jpg") no-repeat;
+    background: url("bg-home-office-studio.jpg") no-repeat;
     background-size: cover;
 
 }
 
 .home .content-wrapper{
-    background: rgb(255 255 255 / 0.9);
+    background: rgb(255 255 255 / 0.8);
 }
 /* RESUME STYLES
 -------------------------------------------*/
@@ -46,4 +77,19 @@ body{
 .footer{
     background: #222;
     color: #d3d4d6;
+}
+
+.socials{
+    list-style-type: none;
+    padding: 0;
+
+}
+
+.socials li{
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.socials img{
+    width: 32px;
 }
