--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ footer a:hover{
 /* HOME STYLES
 -------------------------------------------*/
 .home{
-    background: url("bg-home-office-studio.jpg") no-repeat;
+    background: url("../images/bg-home-office-studio.jpg") no-repeat;
     background-size: cover;
 
 }
