--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ html {
 *, *:before, *:after {
     box-sizing: inherit;
 }
+
+html, body{
+    height: 100%;
+}
+
 body{
     background: #f6f6f6;
 }
