--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ footer a:hover{
     color: #f6f6f6;
     text-decoration: none;
 }
+
+.content-wrapper{
+    margin: 0 auto;
+    padding: 30px;
+    max-width: 900px;
+
+}
 /* HOME STYLES
 -------------------------------------------*/
 .home{
