update header bg img.

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,15 @@ footer a:hover{
 }
 /* RESUME STYLES
 -------------------------------------------*/
+.resume header::before{
+    background: url("../images/bg-home-office-studio.jpg") center;
+    background-size: cover;
+    content: "";
+    display: block;
+    height: 375px;
+
+
+}
 
 /* Profile STYLES
 -------------------------------------------*/
