--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@ footer a:hover{
 .footer{
     background: #222;
     color: #d3d4d6;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .socials{
@@ -138,9 +141,13 @@ footer a:hover{
 
 .socials li{
     display: inline-block;
-    margin-right: 10px;
+    margin-left: 10px;
 }
 
 .socials img{
     width: 32px;
+}
+
+.socials img:hover {
+    opacity: 0.5;
 }
