--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,9 @@ footer a:hover{
 }
 /* Education STYLES
 -------------------------------------------*/
-
+.education-section h3{
+    border-bottom: 1px dashed #bcaa96;
+}
 /* FOOTER STYLES
 -------------------------------------------*/
 
