--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,13 @@ footer a:hover{
 
 /* Work Experience STYLES
 -------------------------------------------*/
-.work-experience-section h3{
-    border-bottom: 1px dashed #bcaa96;
+/*.work-experience-section h3{*/
+/*    border-bottom: 1px dashed #bcaa96;*/
+/*}*/
+.work-experience-section{
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    gap: 10px;
 }
 /* Education STYLES
 -------------------------------------------*/
