--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,13 @@ footer a:hover{
     background: #3c8453;
     color: #f6f6f6;
     text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    display: inline-block;
+    padding: 7px;
+    letter-spacing: .1em;
+    line-height: 1;
+    border-radius: 4px;
 }
 
 .content-wrapper{
