update download btn

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ footer a:hover{
     position: fixed;
     top: 5px;
     left: 5px;
+    font-size: 1.5rem;
 }
 /* Profile STYLES
 -------------------------------------------*/
