--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ footer a:hover{
 /* FOOTER STYLES
 -------------------------------------------*/
 
-.footer{
+footer{
     background: #222;
     color: #d3d4d6;
     display: flex;
