--- a/css/style.css
+++ b/css/style.css
@@ -145,12 +145,12 @@ footer a:hover{
 
 /* Work Experience STYLES
 -------------------------------------------*/
-.work-experience-section{
-    display: grid;
-    grid-template-columns: 300px 1fr;
-    gap: 10px;
-    margin: 30px 0;
-}
+/*.work-experience-section{*/
+    /*display: grid;*/
+    /*grid-template-columns: 300px 1fr;*/
+    /*gap: 10px;*/
+    /*margin: 30px 0;*/
+/*}*/
 
 .work-details p{
     margin: 0;
@@ -158,6 +158,17 @@ footer a:hover{
 
 .work-summary p:first-child{
     margin-top: 0;
+}
+
+@media screen and (min-width: 860px) {
+    .work-experience-section {
+        display: grid;
+        grid-template-columns: 300px 1fr;
+        column-gap: 20px;
+    }
+    .work-summary p:first-child {
+        margin-top: 0;
+    }
 }
 /* Education STYLES
 -------------------------------------------*/
