--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,18 @@ footer a:hover{
     left: 5px;
     font-size: 1.5rem;
 }
+
+@media screen and (max-width: 500px){
+    .resume header::before {
+        height: 200px;
+    }
+    h1 {
+        font-size: 5rem;
+    }
+    h2 {
+        font-size: 2.6rem;
+    }
+}
 /* Profile STYLES
 -------------------------------------------*/
 
