--- a/css/style.css
+++ b/css/style.css
@@ -196,9 +196,6 @@ footer a:hover{
 footer{
     background: #222;
     color: #d3d4d6;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
 }
 
 .socials{
@@ -218,4 +215,23 @@ footer{
 
 .socials img:hover {
     opacity: 0.5;
+}
+
+@media screen and (min-width: 860px) {
+    footer{
+        background: #222;
+        color: #d3d4d6;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
+    }
+
+}
+
+@media screen and (max-width: 859px){
+    footer {
+        text-align: center;
+        padding: 10px;
+    }
+
 }
