make download link position fixed for small screens.

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,12 @@ footer a:hover{
     font-size: 1.5rem;
 }
 
+@media screen and (max-width: 1200px){
+    .download-link {
+        position: absolute;
+    }
+}
+
 @media screen and (max-width: 500px){
     .resume header::before {
         height: 200px;
