--- a/css/style.css
+++ b/css/style.css
@@ -154,17 +154,17 @@ footer a:hover{
 /* Profile STYLES
 -------------------------------------------*/
 
-.project-item {
-    display: flow-root;
-    margin: 30px 0;
-}
+/*.project-item {*/
+/*    display: flow-root;*/
+/*    margin: 30px 0;*/
+/*}*/
 
-.project-item img{
-    width: 300px;
-    float: left;
-    margin-right: 20px;
+/*.project-item img{*/
+/*    width: 300px;*/
+/*    float: left;*/
+/*    margin-right: 20px;*/
 
-}
+/*}*/
 
 /* Projects STYLES
 -------------------------------------------*/
