--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,17 @@ footer a:hover{
 .education-section{
     margin: 30px 0;
 }
+
+/* Skills STYLES
+-------------------------------------------*/
+
+.skills-group{
+    display: inline-grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    margin: 10px 10px auto;
+}
+
+
 /* FOOTER STYLES
 -------------------------------------------*/
 
