--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,13 @@ footer a:hover{
     max-width: 900px;
 
 }
+
+@media screen and (max-width: 500px){
+    .content-wrapper {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+}
 /* HOME STYLES
 -------------------------------------------*/
 .home{
@@ -123,6 +130,11 @@ footer a:hover{
     margin-bottom: 50px;
 }
 
+@media screen and (max-width: 500px){
+    .resume-section {
+        margin-bottom: 10px;
+    }
+}
 .resume-section h2{
     border-bottom: 2px dashed #d3d4d6;
 }
