--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,15 @@ footer a:hover{
         margin: 10px 10px auto;
     }
 }
-
+@media screen and (max-width: 400px){
+    .skills-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        /*margin: 10px 0;*/
+        margin-top: 15px;
+        grid-gap: 50px;
+    }
+}
 /* FOOTER STYLES
 -------------------------------------------*/
 
