--- a/css/style.css
+++ b/css/style.css
@@ -291,13 +291,18 @@ footer{
     gap: 50px;
 }
 
-.project-item{
-    margin-bottom: 50px;
+.certificate-item img{
+    height: 200px;
+    width: 300px;
+    margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 .project-item img{
     height: 200px;
-    width: 300px
+    width: 300px;
+    margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 @media screen and (max-width: 860px) {
